Added Logo and SearchBar in HTML Page

--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
+        <div class="row">
+            <div class="logo-left">
+                <img src="images/logo.png">
+            </div>
+            <div class="search-right">
+                <input placeholder="Search...." id="search">
+            </div>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
