--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="images/logo.png">
             </div>
             <div class="search-right">
-                <input placeholder="Search...." id="search">
+                <input placeholder="Search...." type="text" id="search">
             </div>
         </div>
         <div>
