Added footer and Menu class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div>
             <nav>
-                <ul>
+                <ul class="Menu">
                     <li>Home</li>
                     <li>About</li>
                     <li>Contact</li>
@@ -27,4 +27,7 @@
         </div>
     </header>
 </body>
+<footer>
+    <h1>Footer content</h1>
+</footer>
 </html>
