Added left and right side bar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         </div>
     </header>
 </body>
+<main>
+    <aside class="left">
+        <ul class="sidebar menu">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </aside>
+    <section>
+
+    </section>
+    <aside class="right">
+
+    </aside>
+</main>
 <footer>
     <h1>Footer content</h1>
 </footer>
